[package]
name = "cobblestone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1"
codec = { path = "codec" }
codec_derive = { path = "codec_derive" }
pin-project-lite = "0.2"
cfb8 = "0.8"